//
// Protocol buffers definition
//
syntax = "proto3";
package pt.tecnico.rec.grpc;


// Specific Values
message RegisterValue {
  oneof value {
    RegisterBalance RegBalance = 1;
    RegisterOnBike RegOnBike = 2;
    RegisterNBikes RegNBikes = 3;
    RegisterNPickUps RegNPickUps = 4;
    RegisterNDeliveries RegNDeliveries = 5;
  }
}

message RegisterBalance {
  int32 balance = 1;
}

message RegisterOnBike {
  bool onBike = 1;
}

message RegisterNBikes {
  int32 nBikes = 1;
}

message RegisterNPickUps {
  int32 nPickUps = 1;
}

message RegisterNDeliveries {
  int32 nDeliveries = 1;
}

// Used messages
message RegisterRequest {
  string id = 1;
  RegisterValue data = 2;
}

message ReadResponse {
  RegisterValue data = 1;
}

message WriteResponse {
}

message PingRequest {
  string input = 1;
}

message PingResponse {
	string output = 1;
}
  
service RecordService {
  rpc read(RegisterRequest) returns (ReadResponse);
  rpc write(RegisterRequest) returns (WriteResponse);
  rpc ping(PingRequest) returns (PingResponse);
}
